homogenized bio pages, added jpgs to img tags

--- a/kemal.html
+++ b/kemal.html
@@ -9,7 +9,7 @@
    
    <a href="index.html">Home</a>
    <h1 id='name'>Kemal Deger</h1>
-   <img src="img/YOUR_IMG.jpg" class='img-circle' height='400' width='400'>
+   <img src="/images/kemalbatman.jpg" class='img-circle' height='400' width='400'>
    <p id='bio'>Kemal starts his day off with a fresh picked bowl of spinach, a large cup of raw eggs, and 25 push downs. He calls them push-downs instead of push-ups becasue he's pushing the Earth down with each rep. 'Nough said.</p>
  </div>
 
