--- a/zoe.html
+++ b/zoe.html
@@ -9,7 +9,7 @@
    
    <a href="index.html">Home</a>
    <h1 id='name'>Zoe McDaniel</h1>
-   <img src="img/YOUR_IMG.jpg" class='img-circle' height='400' width='400'>
+   <img src="/images/zoepic.jpg" class='img-circle' height='400' width='400'>
    <p id='bio'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
